--- a/OchoPad/OchoPad/Base.lproj/Main.storyboard
+++ b/OchoPad/OchoPad/Base.lproj/Main.storyboard
@@ -374,7 +374,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <outlet property="SelectEditAssignment" destination="dJB-pz-D1N" id="Kto-Ed-cy2"/>
                         <outlet property="StudentButton" destination="fFS-xX-OVe" id="0CS-Rd-QwH"/>
                         <outlet property="StudentLabel" destination="MY0-yG-DCs" id="ECp-SV-zEI"/>
-                        <outlet property="UpdateButton" destination="RX7-9f-con" id="ZCM-7Z-5J1"/>
+                        <outlet property="UpdateButton" destination="RX7-9f-con" id="eCV-CW-CJe"/>
                         <outlet property="courseName" destination="foY-Gz-seN" id="Byo-Qz-NNk"/>
                         <outlet property="courseNumber" destination="xV8-Gn-b8W" id="IRz-fq-keB"/>
                         <outlet property="daysError" destination="5c2-sI-Aex" id="gGB-aO-RTi"/>
